all services implemented

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 SPARK_HOST="spark-master"
+MINIO_HOST="minio"
+MINIO_PORT=9000
 SPARK_PORT=7077
 REDIS_PORT=6379
 REDIS_HOST="redis"
 COUNTRY_CITY_DATASET_PATH="datasets/CountryCode-City.csv"
+MINIO_AC_KEY="minioadmin"
+MINIO_PASS="minioadmin"
+REVENUE_DATASET_PATH="./datasets/REF_CBS_SMS2.csv"
