--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
 
   flask-api:
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
